[metadata]
name = routing_algo
description = "Routing algorithms for the bridges"

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
norecursedirs =
    dist
    build
    .tox
testpaths = ./tests/
python_files = test_*.py

[flake8]
max_line_length = 120
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py